--- a/style.css
+++ b/style.css
@@ -174,7 +174,7 @@ nav {
 }
 
 .mobile-link:hover {
-  color: #0d9901;
+  color: #000000;
 }
 
 /* Hero section styles */
